# python

./: Automation-Tools.md  Config-Files-For-Tools.md  Development-Best-Practices.md  Dockerfiles.md  Layout.md  README.md  Testing.md
cookiecutters/python_core/: cookiecutter.json
cookiecutters/python_core/{{ cookiecutter.project_name }}/: .gitignore  Dockerfile  README.md  pytest.ini  requirements_build.txt  requirements_dev.txt  setup.cfg  setup.py  tasks.py
cookiecutters/python_core/{{ cookiecutter.project_name }}/docs/: Automation-Tools.md  Config-Files-For-Tools.md  Development-Best-Practices.md  Git.md  Testing.md  conf.py  index.rst  main.rst
cookiecutters/python_core/{{ cookiecutter.project_name }}/docs/modules/: common.rst  configuration.rst
cookiecutters/python_core/{{ cookiecutter.project_name }}/tests/: conftest.py  test_common.py  test_config.py  test_requests.py  test_time_helpers.py
cookiecutters/python_core/{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/: __init__.py  logging.py  math.py  requests.py  time_helpers.py
cookiecutters/python_core/{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/cli/: common.py
examples/python-core-example/: Dockerfile  README.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tasks.py
examples/python-core-example/docs/: conf.py  index.rst  main.rst  modules.rst
examples/python-core-example/docs/modules/: common.rst  configuration.rst
examples/python-core-example/git_hooks/: pre-push
examples/python-core-example/python_core_example/: common.py  config.py
examples/python-core-example/python_core_example/cli/: __init__.py  common.py
examples/python-core-example/tests/: conftest.py  test_common.py  test_config.py  test_requests.py  test_time_helpers.py
