[metadata]
name = python_core_example
version = attr: python_core_example.__version__
license = MIT
author = m@mehrten.dev
author_email = m@mehrten.dev
maintainer = m@mehrten.dev
maintainer_email = m@mehrten.dev
description = Library for python-core-example.
long_description = file: README.md
long_description_content_type = text/x-md
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python

[options.entry_points]
console_scripts =
    python-core-example = python_core_example.cli:cli

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    flask
    tests
omit =
    # omit CLI from testing for the time being
    */cli/*


[coverage:paths]
source =
    python_core_example

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    W503 # line break before binary operator
    E203 # : inside of a list slice
    E501 # Line too long
# up to 88 allowed by bugbear B950
max-line-length = 120

[isort]
profile = black
default_section=THIRDPARTY
known_third_party=python_core_example

[mypy]
python_version = 3.8
allow_redefinition = True
disallow_subclassing_any = True
# disallow_untyped_calls = True
# disallow_untyped_defs = True
# disallow_incomplete_defs = True
no_implicit_optional = True
local_partial_types = True
# no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
# warn_return_any = True
# warn_unreachable = True

# Ignore selenium import issues for MyPy so we don't have to install locally (e.g. for unmigrated Lambda / Glue jobs)
[mypy-selenium.*]
ignore_missing_imports = True
[mypy-awsglue.*]
ignore_missing_imports = True
[mypy-unidecode.*]
ignore_missing_imports = True

# Ignore invoke errors, no stubs installed for library
[mypy-invoke.*]
ignore_missing_imports = True
[mypy-TikTokApi.*]
ignore_missing_imports = True
[mypy-pyarrow.*]
ignore_missing_imports = True
[mypy-smart_open.*]
ignore_missing_imports = True
[mypy-sparknlp.*]
ignore_missing_imports = True
[mypy-vaderSentiment.*]
ignore_missing_imports = True
[mypy-sklearn.*]
ignore_missing_imports = True
[mypy-pause.*]
ignore_missing_imports = True
[mypy-fullcontact.*]
ignore_missing_imports = True
[mypy-demoji.*]
ignore_missing_imports = True
[mypy-tqdm.*]
ignore_missing_imports = True
[mypy-snscrape.*]
ignore_missing_imports = True
[mypy-bs4.*]
ignore_missing_imports = True
[mypy-pandas.*]
ignore_missing_imports = True
[mypy-pytrends.*]
ignore_missing_imports = True
[mypy-airflow.*]
ignore_missing_imports = True
[mypy-gensim.*]
ignore_missing_imports = True
[mypy-umap.*]
ignore_missing_imports = True
[mypy-hdbscan.*]
ignore_missing_imports = True
[mypy-graphframes.*]
ignore_missing_imports = True
[mypy-matplotlib.*]
ignore_missing_imports = True
[mypy-scipy.*]
ignore_missing_imports = True
[mypy-pmdarima.*]
ignore_missing_imports = True
[mypy-statsmodels.*]
ignore_missing_imports = True
[mypy-spacy.*]
ignore_missing_imports = True
[mypy-wordcloud.*]
ignore_missing_imports = True
[mypy-seaborn.*]
ignore_missing_imports = True
